tests/ui/lexer/lex-bad-char-literals-3.stderr
error: character literal may only contain one codepoint
  --> $DIR/lex-bad-char-literals-3.rs:1:18
   |
LL | static c: char = '●●';
   |                  ^^^^
   |
help: if you meant to write a string literal, use double quotes
   |
LL - static c: char = '●●';
LL + static c: char = "●●";
   |

error: character literal may only contain one codepoint
  --> $DIR/lex-bad-char-literals-3.rs:5:20
   |
LL |     let ch: &str = '●●';
   |                    ^^^^
   |
help: if you meant to write a string literal, use double quotes
   |
LL -     let ch: &str = '●●';
LL +     let ch: &str = "●●";
   |

error: aborting due to 2 previous errors

